# rust-fmamsg

./: Cargo.toml
src/: bits.rs  crc.rs  lib.rs
